tests/reference/asr-type_mismatch-61052c7.stderr
semantic error: Type mismatch in shorthand operator, the types must be compatible
 --> tests/errors/type_mismatch.py:8:5
  |
8 |     a *= b
  |     ^    ^ type mismatch ('i32' and 'f32')
